--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
+
+
   <title>Triangle Tracker</title>
 </head>
 
 <body>
+<div class="container">
+<img src="https://i.gifer.com/MPyj.gif" alt="triangle" style="width:130%; height:400px">
 
+</div>
   <div class="jumbotron">
     <h1 class="display-4">Hello, world!</h1>
     <p class="lead">This is a simple application program that determines whether a set of three numbers can either make a scalene,equilateral or isosceles triangle.</p>
     <hr class="my-4">
-    
+
   </div>
 
   <div class="container">
